--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.13.2"
+bevy_rapier3d = { version = "0.25.0", features = [ "simd-stable", "debug-render-3d" ] }
