--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,14 @@ path = "source/code/main.rs"
 
 [dependencies]
 bevy = "0.13.2"
-bevy_rapier3d = { version = "0.25.0", features = [ "simd-stable", "debug-render-3d" ] }
+bevy_rapier3d = { version = "0.25.0", features = [
+  "simd-stable",
+  "debug-render-3d",
+] }
+
+# Enable max optimizations for dependencies, but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.dev]
+opt-level = 1
